[package]
name = "vacon-signaling-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
async-shutdown = "0.2.1"
bytes = "1.5.0"
clap = { version = "4.5.1", features = ["derive"] }
futures-channel = "0.3.30"
futures-util = "0.3.30"
log = "0.4.20"
stderrlog = "0.6.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-listener = { version = "0.3.1", features = ["clap"] }
tokio-tungstenite = "0.21.0"
